--- a/src/pages/batch-bill-details/batch-bill-details.html
+++ b/src/pages/batch-bill-details/batch-bill-details.html
@@ -18,7 +18,7 @@
   </ion-header>
   
   
-  <ion-content padding>
+  <ion-content>
   
       <ion-item>
         <ion-label floating>Batch date</ion-label>
