implemented user permission

--- a/src/pages/user-details/user-details.html
+++ b/src/pages/user-details/user-details.html
@@ -4,6 +4,9 @@
     <ion-title></ion-title>
 
     <ion-buttons end>
+        <button ion-button color="primary" (click)="permissions()">
+            <ion-icon name="key"></ion-icon>&nbsp;Permissions
+        </button>
         <button ion-button color="primary" (click)="save()">
             <ion-icon name="checkmark"></ion-icon>&nbsp;Save
         </button>
