--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -66,6 +66,12 @@
   <ion-card-header text-left (click)="openPage('UsersPage')">
       <ion-icon name="people"></ion-icon>&nbsp;Users
   </ion-card-header>
-</ion-card> 
+</ion-card>
+
+<ion-card color='primary'>
+  <ion-card-header text-left (click)="selectPrinter()">
+      <ion-icon name="print"></ion-icon>&nbsp;Select printer
+  </ion-card-header>
+</ion-card>
 
 </ion-content>
