--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,64 +14,48 @@
 </ion-header>
 <ion-content padding>
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('SoaPage')">
-    <ion-icon name="stats"></ion-icon>&nbsp;Tenant statement
-  </ion-card-header>
-</ion-card>
-  
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('PaymentsPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('SoaPage')">
+      <ion-icon name="stats"></ion-icon>&nbsp;Tenant statement
+    </button>
+
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('PaymentsPage')">
       <ion-icon name="cash"></ion-icon>&nbsp;Receive payment
-  </ion-card-header>
-</ion-card>    
+    </button>    
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('BillsPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('BillsPage')">
       <ion-icon name="paper"></ion-icon>&nbsp;Bills
-  </ion-card-header>
-</ion-card>  
+    </button>    
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('BatchBillsPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('BatchBillsPage')">
       <ion-icon name="paper"></ion-icon>&nbsp;Batch billing
-  </ion-card-header>
-</ion-card>  
+    </button>        
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('PowerMeterReadingsPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('PowerMeterReadingsPage')">
       <ion-icon name="calculator"></ion-icon>&nbsp;Power meter reading
-  </ion-card-header>
-</ion-card>
+    </button>            
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('LesseesPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('LesseesPage')">
       <ion-icon name="contacts"></ion-icon>&nbsp;Lessees
-  </ion-card-header>
-</ion-card>  
+    </button>            
+      
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('LesseesPage')">
+      <ion-icon name="contacts"></ion-icon>&nbsp;Lessees
+    </button>
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('UnitsPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('UnitsPage')">
       <ion-icon name="home"></ion-icon>&nbsp;Units
-  </ion-card-header>
-</ion-card> 
+    </button>    
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('PowerMetersPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('PowerMetersPage')">
       <ion-icon name="flash"></ion-icon>&nbsp;Power meters
-  </ion-card-header>
-</ion-card>
+    </button> 
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="openPage('UsersPage')">
+    <button class='action-btn' full round ion-button icon-left (click)="openPage('UsersPage')">
       <ion-icon name="people"></ion-icon>&nbsp;Users
-  </ion-card-header>
-</ion-card>
+    </button>     
 
-<ion-card color='primary'>
-  <ion-card-header text-left (click)="selectPrinter()">
-      <ion-icon name="print"></ion-icon>&nbsp;Select printer
-  </ion-card-header>
-</ion-card>
+    <button class='action-btn' full round ion-button icon-left (click)="selectPrinter()">
+        <ion-icon name="print"></ion-icon>&nbsp;Select printer
+    </button>     
 
 </ion-content>
