--- a/src/pages/unit-details/unit-details.html
+++ b/src/pages/unit-details/unit-details.html
@@ -50,7 +50,7 @@
 
     <ion-item>
       <ion-label floating>Monthly lease</ion-label>
-      <ion-input type="text" [(ngModel)]='unit.monthly_lease'></ion-input>
+      <ion-input type="number" [(ngModel)]='unit.monthly_lease'></ion-input>
     </ion-item>          
 
     <ion-item>
