--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -26,7 +26,7 @@
     {{login_btn_label}}
   </button>
 
-  <button class='create-account' ion-button clear float-center bottom>
+  <button class='create-account' ion-button clear float-center bottom (click)="create_account()">
     Create new account
   </button>
 
