--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar primary>
     <ion-title>Rentals</ion-title>
 
     <ion-buttons end>
@@ -14,43 +14,43 @@
 </ion-header>
 <ion-content padding *ngIf="gs.logged_in">
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('SoaPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('SoaPage')">
       <ion-icon name="stats"></ion-icon>&nbsp;Tenant statement
     </button>
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('PaymentsPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('PaymentsPage')">
       <ion-icon name="cash"></ion-icon>&nbsp;Receive payment
     </button>    
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('BillsPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('BillsPage')">
       <ion-icon name="paper"></ion-icon>&nbsp;Bills
     </button>    
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('BatchBillsPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('BatchBillsPage')">
       <ion-icon name="paper"></ion-icon>&nbsp;Batch billing
     </button>        
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('PowerMeterReadingsPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('PowerMeterReadingsPage')">
       <ion-icon name="calculator"></ion-icon>&nbsp;Power meter reading
     </button>            
       
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('LesseesPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('LesseesPage')">
       <ion-icon name="contacts"></ion-icon>&nbsp;Lessees
     </button>
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('UnitsPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('UnitsPage')">
       <ion-icon name="home"></ion-icon>&nbsp;Units
     </button>    
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('PowerMetersPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('PowerMetersPage')">
       <ion-icon name="flash"></ion-icon>&nbsp;Power meters
     </button> 
 
-    <button class='action-btn' full round ion-button icon-left (click)="openPage('UsersPage')">
+    <button class='action-btn' full ion-button icon-left (click)="openPage('UsersPage')">
       <ion-icon name="people"></ion-icon>&nbsp;Users
     </button>     
 
-    <button class='action-btn' full round ion-button icon-left (click)="selectPrinter()">
+    <button class='action-btn' full ion-button icon-left (click)="selectPrinter()">
         <ion-icon name="print"></ion-icon>&nbsp;Select printer
     </button>     
 
