--- a/src/pages/payments/payments.html
+++ b/src/pages/payments/payments.html
@@ -25,8 +25,8 @@
       <span float-right>{{payment.amount|number:'1.2-2'}}</span>
     </ion-card-header>
     <ion-card-content>
-      <span float-left>{{gs.get_lessee_name(lessees, payment.lessee_uid)}}</span>
-      <span float-right>{{gs.get_unit_nmbr(units, payment.unit_uid)}}</span>
+      <span float-left>{{gs.get_lessee(payment.lessee_uid).name}}</span>
+      <span float-right>{{gs.get_unit(payment.unit_uid).nmbr}}</span>
     </ion-card-content>
   </ion-card>
 
