--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -115,6 +115,6 @@
 
     </ion-grid>
      
-  
+    <img src="assets/imgs/rentalslogo.png" class='logo' alt="logo" align-center>
 
 </ion-content>
