removed the test login credentials

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar primary>
+  <ion-navbar color='primary'>
     <ion-title>Rentals</ion-title>
 
     <ion-buttons end>
@@ -115,6 +115,4 @@
 
     </ion-grid>
      
-    <img src="assets/imgs/rentalslogo.png" class='logo' alt="logo" align-center>
-
 </ion-content>
