--- a/src/pages/power-meter-details/power-meter-details.html
+++ b/src/pages/power-meter-details/power-meter-details.html
@@ -29,6 +29,11 @@
     </ion-item>      
 
     <ion-item>
+        <ion-label floating>Last reading</ion-label>
+        <ion-input type="number" [(ngModel)]='power_meter.last_reading'></ion-input>
+      </ion-item>          
+
+    <ion-item>
       <ion-label floating>Remarks</ion-label>
       <ion-input type="text" [(ngModel)]='power_meter.remarks'></ion-input>
     </ion-item>
